--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@fullcalendar/angular": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@material/card": "^14.0.0",
+    "@stomp/stompjs": "^7.0.0",
+    "@types/sockjs-client": "^1.5.4",
+    "moment": "^2.30.1",
+    "ngx-material-file-input": "^4.0.1",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
