--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/forms": "^17.2.0",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
-    "@angular/router": "^17.2.0",
+    "@angular/router": "^17.3.12",
     "@fullcalendar/angular": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.11",
     "@material/card": "^14.0.0",
@@ -26,7 +26,9 @@
     "moment": "^2.30.1",
     "ngx-material-file-input": "^4.0.1",
     "rxjs": "~7.8.0",
+    "simple-peer": "^9.11.1",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -36,6 +38,8 @@
     "@angular/cli": "^17.2.1",
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/simple-peer": "^9.11.8",
+    "@types/stompjs": "^2.3.9",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
